<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of MYCallsign
  ~
  ~ Copyright (c) 2016 Mohammad Hafiz bin Ismail <mypapit@gmail.com>
  ~ MYCallsign is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as
  ~ published by the Free Software Foundation, either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

  -->
<resources>

    <string name="app_name">MYCallsign</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_filter">Search by</string>
    <string name="action_sort">Sort by</string>
    <string name="search_title">Search</string>
    <string name="lblCallsign">Callsign</string>
    <string name="lblHandle">Handle</string>
    <string name="lblAA">Apparatus Assignment No</string>
    <string name="lblExpiry">Expiry</string>
    <string name="map_title">Map</string>
    <string name="empty_list">No favorites!</string>
    <string name="favorite_title">Favorites</string>
    <string name="title_activity_favorite">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="stats_title">Show Stats</string>
    <string name="about_title">About</string>
    <string name="btnshare">Share</string>
    <string name="btnfavorite">Favorite</string>
    <string name="txtLicense">Copyright © 2016 Mohammad Hafiz Ismail\nEmail: &lt;mypapit@gmail.com>\nWeb: https://github.com/mypapit/mycallsign-android\nFacebook: fb.me/mycallsign\nDatabase update: 2016-06-24\n\nThis program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n\nSee the GNU General Public License for more details: http://www.gnu.org/licenses/gpl.html\n\n<b>Special Thanks</b>\n9W2SHB Mysaleh.net for providing callsign database.\n\n<b>DISCLAIMER:</b> This application is not created nor endorsed  by Malaysian Communications &amp; Multimedia Commission (MCMC)."</string>
    <string name="string_btn_list5yearsexpired"><![CDATA[Expired Callsign >5 years]]></string>
    <string name="title_activity_expired_callsign_list">Expired Callsigns</string>
    <string name="strExpiredNotice">Expired callsigns (>5 years)</string>
    <string name="title_activity_maps">Map</string>
    <string name="callsign_will_expire_90days">callsigns will expire in 90 days</string>
    <string name="listed_callsign">listed callsigns!</string>
    <string name="expired_until_today">callsigns expired until today</string>
    <string name="fragments_top_query_30days">Top Queried Callsigns last 30 days</string>
    <string name="top_query_plural"> queries</string>
    <string name="top_query_singular"> query</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-3163716613766876/2450451475</string>
    <string name="progress_dialog">Populating database</string>
    <string name="progress_title">Please wait&#8230;</string>
    <string name="unknown">Unknown</string>
    <string name="no_location">Unable to detect location :(</string>




</resources>
