<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Mohammad Hafiz bin Ismail (mypapit)
  ~
  ~   This software is provided 'as-is', without any express or implied
  ~   warranty.  In no event will the authors be held liable for any damages
  ~   arising from the use of this software.
  ~
  ~   Permission is granted to anyone to use this software for any purpose,
  ~   including commercial applications, and to alter it and redistribute it
  ~   freely, subject to the following restrictions:
  ~
  ~   1. The origin of this software must not be misrepresented; you must not
  ~      claim that you wrote the original software. If you use this software
  ~      in a product, an acknowledgment in the product documentation would be
  ~      appreciated but is not required.
  ~   2. Altered source versions must be plainly marked as such, and must not be
  ~      misrepresented as being the original software.
  ~   3. This notice may not be removed or altered from any source distribution.
  ~
  ~   Mohammad Hafiz bin Ismail
  ~   mypapit@gmail.com
  -->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_horizontal_margin2"
        android:layout_marginTop="@dimen/activity_horizontal_margin2">


    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/label_margin"
                android:text="@string/lblCallsign"
                android:textColor="@color/label_value"

                />

            <TextView
                android:id="@+id/tvdCallsign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9W2WTF"
                android:textColor="@color/label_title" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <com.cyrilmottier.android.listviewtipsandtricks.widget.DontPressWithParentCheckBox
                android:id="@+id/btn_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@android:drawable/btn_star"
                android:focusable="false" />

        </RelativeLayout>


        />
    </LinearLayout>

    <View style="@style/Divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/label_margin"
        android:text="@string/lblAA"
        android:textColor="@color/label_value"

        />

    <TextView
        android:id="@+id/tvdAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="01845023-000SU/122014"
        android:textColor="@color/label_title" />

    <View style="@style/Divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/label_margin"
        android:text="@string/lblExpiry"
        android:textColor="@color/label_value"

        />

    <TextView
        android:id="@+id/tvdExpiry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2018-12-31"
        android:textColor="@color/label_title" />


</LinearLayout>

